z-index fix staging test 2.0

--- a/app/Resources/assets/scss/control_panel.scss
+++ b/app/Resources/assets/scss/control_panel.scss
@@ -17,10 +17,6 @@ body {
   font-size: 14px;
 }
 
-.popup{
-  z-index: 1020;
-}
-
 .card-header {
   font-size: 16px;
 }
